--- a/cyc/src/css/App.css
+++ b/cyc/src/css/App.css
@@ -5,6 +5,11 @@
   font-style: normal;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .App {
   text-align: center;
   background-color:#05022C;
@@ -25,7 +30,6 @@
 
 .select div{
   font-size: 20px;
-  color: white;
   padding: 10px;
   border: 3px solid #FFD966;
   border-radius: 30px;
