#2 closet 카테고리 선택 페이지 구현

--- a/cyc/src/css/App.css
+++ b/cyc/src/css/App.css
@@ -5,15 +5,10 @@
   font-style: normal;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-}
-
 .App {
   text-align: center;
   background-color:#05022C;
-  height: 100vh;
+  height: 100%;
   font-family: GmarketSansMedium;
 }
 
@@ -35,19 +30,19 @@ a {
   border-radius: 30px;
 }
 
-.color{
+.home_color{
   width: 170px;
   margin-bottom: 40px;
   margin-left: 20%;
 }
 
-.cody{
+.home_cody{
   width: 240px;
   float: right;
   margin-right: 10%;
 }
 
-.closet{
+.home_closet{
   width: 280px;
   margin-top: 180px;
   margin-left: 10%;
