--- a/cyc/src/css/App.css
+++ b/cyc/src/css/App.css
@@ -8,7 +8,7 @@
 .App {
   text-align: center;
   background-color:#05022C;
-  height: 100%;
+  height: 100vh;
   font-family: GmarketSansMedium;
 }
 
