#4 color 라우터 추가, 코드 수정

--- a/cyc/src/css/color.css
+++ b/cyc/src/css/color.css
@@ -11,12 +11,12 @@
     margin-bottom: 50px;
 }
 
-.month{
+.choice{
     width: fit-content;
     margin: auto;
 }
 
-.month div{
+.choiece div{
     float: left;
     width: 130px;
     height: 60px;
